--- a/environment.yml
+++ b/environment.yml
@@ -56,18 +56,26 @@ dependencies:
   - pip:
       - alembic==1.13.1
       - colorlog==6.8.2
+      - contourpy==1.2.1
+      - cycler==0.12.1
+      - fonttools==4.53.0
       - greenlet==3.0.3
       - joblib==1.4.2
+      - kiwisolver==1.4.5
       - mako==1.3.5
       - markupsafe==2.1.5
+      - matplotlib==3.9.0
       - numpy==2.0.0
       - optuna==3.6.1
       - pandas==2.2.2
+      - pillow==10.3.0
+      - pyparsing==3.1.2
       - python-dateutil==2.9.0.post0
       - pytz==2024.1
       - pyyaml==6.0.1
       - scikit-learn==1.5.0
       - scipy==1.13.1
+      - seaborn==0.13.2
       - sqlalchemy==2.0.30
       - threadpoolctl==3.5.0
       - tqdm==4.66.4
