--- a/environment.yml
+++ b/environment.yml
@@ -55,29 +55,41 @@ dependencies:
   - zlib=1.2.13=h8cc25b3_1
   - pip:
       - alembic==1.13.1
+      - attrs==23.2.0
       - colorlog==6.8.2
       - contourpy==1.2.1
       - cycler==0.12.1
+      - fastjsonschema==2.20.0
       - fonttools==4.53.0
       - greenlet==3.0.3
+      - ipywidgets==8.1.3
       - joblib==1.4.2
+      - jsonschema==4.22.0
+      - jsonschema-specifications==2023.12.1
+      - jupyterlab-widgets==3.0.11
       - kiwisolver==1.4.5
       - mako==1.3.5
       - markupsafe==2.1.5
       - matplotlib==3.9.0
+      - nbformat==5.10.4
       - numpy==2.0.0
       - optuna==3.6.1
       - pandas==2.2.2
       - pillow==10.3.0
+      - plotly==5.22.0
       - pyparsing==3.1.2
       - python-dateutil==2.9.0.post0
       - pytz==2024.1
       - pyyaml==6.0.1
+      - referencing==0.35.1
+      - rpds-py==0.18.1
       - scikit-learn==1.5.0
       - scipy==1.13.1
       - seaborn==0.13.2
       - sqlalchemy==2.0.30
+      - tenacity==8.4.1
       - threadpoolctl==3.5.0
       - tqdm==4.66.4
       - tzdata==2024.1
+      - widgetsnbextension==4.0.11
 prefix: C:\Users\shata\miniconda3\envs\env_rnd
